continuing to debug

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hubs Vue Apps</title>
   </head>
   <body>
-    <p><a href="src/apps/HubsTest1/index.html">HubsTest1</a></p>
-    <p><a href="src/apps/HubsTest2/index.html">HubsTest2</a></p>
+    <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
+    <p><a href="./src/apps/HubsTest2/index.html">HubsTest2</a></p>
 </body>
 </html>
