Fixing format errors in the test vue apps

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
     <p><a href="./src/apps/HubsTest2/index.html">HubsTest2</a></p>
+    <p><a href="./src/apps/3D/index.html">3D</a></p>
+    <p><a href="./src/apps/AR-VR/index.html">AR-VR</a></p>
+    <p><a href="./src/apps/Center1/index.html">Center1</a></p>
+    <p><a href="./src/apps/Center2/index.html">Center2</a></p>
+    <p><a href="./src/apps/History/index.html">History</a></p>
+    <p><a href="./src/apps/Intro/index.html">Intro</a></p>
     <!--<p><a href="./src/apps/HubsRevealTest/index.html">HubsRevealTest</a></p>-->
 </body>
 </html>
