--- a/src/apps/hubs test apps /HubsTest2/index.html
+++ b/src/apps/hubs test apps /HubsTest2/index.html
@@ -10,14 +10,9 @@
             background-color: lightgray;
         }
     </style>
-  <script type="module" crossorigin src="/vue-apps/index3.js"></script>
-  <link rel="modulepreload" href="/vue-apps/WebApp.js">
-  <link rel="modulepreload" href="/vue-apps/vendor.js">
-  <link rel="stylesheet" href="/vue-apps/assets/index3.c2b8698a.css">
-  <link rel="stylesheet" href="/vue-apps/assets/top.e3fb2e17.css">
-</head>
+  </head>
   <body>
     <div id="app"></div>
-    
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
