Added more apps to the hubs and index
To make them new text and images available. but now this is a bug in running the server.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p><a href="./src/apps/Center5_Genres/index.html">Center5_Genres</a></p>
     <p><a href="./src/apps/Center6_Future/index.html">Center6_Future</a></p>
     <p><a href="./src/apps/Center7_Privacy/index.html">Center7_Privacy</a></p>
-    <!--<p><a href="./src/apps/HubsRevealTest/index.html">HubsRevealTest</a></p>-->
+    <p><a href="./src/apps/Monolith1_Intro/index.html">Monlith1_Intro</a></p>
 </body>
 </html>
