--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hubs Vue Apps</title>
   </head>
   <body>
+    <h2>Rotunda</h2>
     <p><a href="./src/apps/Center_Map/index.html">Map</a></p>
     <p><a href="./src/apps/Center1_Intro/index.html">Center1</a></p>
     <p><a href="./src/apps/Center2_History/index.html">Center2_History</a></p>
@@ -22,5 +23,11 @@
     <p><a href="./src/apps/Monolith5_Genres/index.html">Monolith5_Genres</a></p>
     <p><a href="./src/apps/Monolith6_Future/index.html">Monolith6_Future</a></p>
     <p><a href="./src/apps/Monolith7_Privacy/index.html">Monolith7_Privacy</a></p>
+
+    <h2>Test Apps</h2>
+    <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
+    <p><a href="./src/apps/HubsTest2/index.html">HubsTest2</a></p>
+    <!--<p><a href="./src/apps/HubsRevealTest/index.html">HubsRevealTest</a></p>-->
+
 </body>
 </html>
