Added a new app for Room5 Alyx
Attempt to test using different folders for different rooms. Started with one app in Room5 Genres.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p><a href="./src/apps/Monolith5_Genres/index.html">Monolith5_Genres</a></p>
     <p><a href="./src/apps/Monolith6_Future/index.html">Monolith6_Future</a></p>
     <p><a href="./src/apps/Monolith7_Privacy/index.html">Monolith7_Privacy</a></p>
+    <p><a href="./src/apps/Room5/Alyx/index.html">Alyx</a></p>
 
     <h2>Test Apps</h2>
     <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
