--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <p><a href="./src/apps/Monolith6_Future/index.html">Monolith6_Future</a></p>
     <p><a href="./src/apps/Monolith7_Privacy/index.html">Monolith7_Privacy</a></p>
     <p><a href="./src/apps/Room5/Alyx/index.html">Alyx</a></p>
+    <p><a href="./src/apps/Room5/Pokemon/index.html">Pokemon</a></p>
+    <p><a href="./src/apps/Room5/BeatSaber/index.html">BeatSaber</a></p>
 
     <h2>Test Apps</h2>
     <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
