Texts for Genres room

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p><a href="./src/apps/Room5/Alyx/index.html">Alyx</a></p>
     <p><a href="./src/apps/Room5/Pokemon/index.html">Pokemon</a></p>
     <p><a href="./src/apps/Room5/BeatSaber/index.html">BeatSaber</a></p>
+    <p><a href="./src/apps/Room5/Minecraft/index.html">Minecraft</a></p>
 
     <h2>Test Apps</h2>
     <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
