--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
     <p><a href="./src/apps/Room5/Minecraft/index.html">Minecraft</a></p>
     <p><a href="./src/apps/Room5/GamesBanner/index.html">GamesBanner</a></p>
 
+    <h2>Presence and Aura room (#6)</h2>
+    <p><a href="./src/apps/Room6/Milk/index.html">Chris Milk</a></p>
+    <p><a href="./src/apps/Room6/Milk_pic/index.html">Cloud Over Sidra</a></p>
+    <p><a href="./src/apps/Room6/Nonnie/index.html">Nonnie</a></p>
+    <p><a href="./src/apps/Room6/Nonnie_pic/index.html">Nonnie picture</a></p>
+
+    <p><a href="./src/apps/Room6/ARandPresence/index.html">AR and Presence</a></p>
+    <p><a href="./src/apps/Room6/Aura/index.html">Aura</a></p>
+    <p><a href="./src/apps/Room6/cybersickness/index.html">cybersickness</a></p>
+    <p><a href="./src/apps/Room6/Empathy/index.html">Empathy</a></p>
+    <p><a href="./src/apps/Room6/Empathy_title/index.html">Empathy title</a></p>
+
+    <p><a href="./src/apps/Room6/map/index.html">Map</a></p>
+    <p><a href="./src/apps/Room6/PitExperiment/index.html">PitExperiment</a></p>
+    <p><a href="./src/apps/Room6/Presence/index.html">Presence</a></p>
+    <p><a href="./src/apps/Room6/Treehugger/index.html">Treehugger</a></p>
+    <p><a href="./src/apps/Room6/Treehugger_pic/">Treehugger picture</a></p>
+
+    <p><a href="./src/apps/Room6/Exit/index.html">Exit</a></p>
+
+    <h2>Pit room</h2>
+    <p><a href="./src/apps/Room_Pit/Pit/index.html">Pit</a></p>
+    <p><a href="./src/apps/Room_Pit/PitInstruction/index.html">Pit Instruction</a></p>
+    <p><a href="./src/apps/Room_Pit/pitSign1/index.html">Pit signage</a></p>
+
+    <p><a href="./src/apps/Room_Pit/pitSign2index.html">Pit signage2</a></p>
+
+
     <h2>Test Apps</h2>
     <p><a href="./src/apps/HubsTest1/index.html">HubsTest1</a></p>
     <p><a href="./src/apps/HubsTest2/index.html">HubsTest2</a></p>
