Add pictures to Rotunda

--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@
     <p><a href="./src/apps/Onboarding/AudioText/index.html">Audio Text</a></p>
     <p><a href="./src/apps/Onboarding/rotundaMap/index.html">Rotunda Map</a></p>
     <p><a href="./src/apps/Onboarding/Sharing/index.html">Other features</a></p>
-
+    <!-- monolith image -->
+    <p><a href="./src/apps/Onboarding/ARVR_monolith/index.html">ARVR monolith</a></p>
+    <p><a href="./src/apps/Onboarding/History_monolith/index.html">History monolith</a></p>
+    <p><a href="./src/apps/Onboarding/Graphics_monolith/index.html">Graphics monolith</a></p>
+    <p><a href="./src/apps/Onboarding/Presence_monolith/index.html">Presence monolith</a></p>
+    <p><a href="./src/apps/Onboarding/Genres_monolith/index.html">Genres monolith</a></p>
+    <p><a href="./src/apps/Onboarding/Privacy_monolith/index.html">Privacy_monolith monolith</a></p>
+    <p><a href="./src/apps/Onboarding/Future_monolith/index.html">Future monolith</a></p>
     <h2>Portal Apps</h2>
     <p><a href="./src/apps/Portal/PortalSubtitle/index.html">Portal Subtitle</a></p>
     <p><a href="./src/apps/Portal/PortalTitle/index.html">Portal Title</a></p>
