--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
     <h2>Presence and Aura room (#6)</h2>
     <p><a href="./src/apps/Room6/map/index.html">Map</a></p>
-    <p><a href="./src/apps/Room6/PitExperiment/index.html">PitExperiment</a></p>
-    <p><a href="./src/apps/Room6/Pit_pic/index.html">Pit picture</a></p>
+
     <p><a href="./src/apps/Room6/Presence/index.html">Presence</a></p>
     <p><a href="./src/apps/Room6/Treehugger/index.html">Treehugger</a></p>
     <p><a href="./src/apps/Room6/Treehugger_pic/">Treehugger picture</a></p>
@@ -44,8 +43,12 @@
     <p><a href="./src/apps/Room6/Empathy_title/index.html">Empathy title</a></p>
     <p><a href="./src/apps/Room6/Milk/index.html">Chris Milk</a></p>
     <p><a href="./src/apps/Room6/Milk_pic/index.html">Cloud Over Sidra</a></p>
+    <p><a href="./src/apps/Room6/Milk_pic2/index.html">Cloud Over Sidra2</a></p>
     <p><a href="./src/apps/Room6/Nonnie/index.html">Nonnie</a></p>
     <p><a href="./src/apps/Room6/Nonnie_pic/index.html">Nonnie picture</a></p>
+    <p><a href="./src/apps/Room6/PitExperiment/index.html">PitExperiment</a></p>
+    <p><a href="./src/apps/Room6/Pit_pic/index.html">Pit picture</a></p>
+
 
     <p><a href="./src/apps/Room6/ARandPresence/index.html">AR and Presence</a></p>
     <p><a href="./src/apps/Room6/Aura/index.html">Aura</a></p>
@@ -53,9 +56,12 @@
     <p><a href="./src/apps/Room6/TerracottaPic/index.html">Terracottta Picture</a></p>
     <p><a href="./src/apps/Room6/Parthenon/index.html">Parthenon Description</a></p>
     <p><a href="./src/apps/Room6/cybersickness/index.html">cybersickness</a></p>
+    <p><a href="./src/apps/Room6/cybersickness_pic/index.html">cybersickness picture</a></p>
     <p><a href="./src/apps/Room6/Exit/index.html">Exit</a></p>
-
-
+    <p><a href="./src/apps/Room6/Gaudi/index.html">Gaudi information</a></p>
+    <p><a href="./src/apps/Room6/Gaudi_pic/index.html">Gaudi picture</a></p>
+    <p><a href="./src/apps/Room6/jp_test/index.html">jp iframe test</a></p>
+    
     <h2>Pit room</h2>
     <p><a href="./src/apps/Room_Pit/Pit/index.html">Pit</a></p>
     <p><a href="./src/apps/Room_Pit/PitInstruction/index.html">Pit Instruction</a></p>
