Presence gallery update

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <p><a href="./src/apps/Room5/GamesBanner/index.html">GamesBanner</a></p>
 
     <h2>Presence and Aura room (#6)</h2>
-    <p><a href="./src/apps/Room6/map/index.html">Map</a></p>
-
+    <p><a href="./src/apps/Room6/Room6_map/index.html">Map</a></p>
+    <p><a href="./src/apps/Room6/Room6_map_2/index.html">Map2</a></p>
+    <p><a href="./src/apps/Room6/Room6_map_3/index.html">Map3</a></p>
     <p><a href="./src/apps/Room6/Presence/index.html">Presence</a></p>
     <p><a href="./src/apps/Room6/Treehugger/index.html">Treehugger</a></p>
     <p><a href="./src/apps/Room6/Treehugger_pic/">Treehugger picture</a></p>
@@ -48,12 +49,15 @@
     <p><a href="./src/apps/Room6/Nonnie_pic/index.html">Nonnie picture</a></p>
     <p><a href="./src/apps/Room6/PitExperiment/index.html">PitExperiment</a></p>
     <p><a href="./src/apps/Room6/Pit_pic/index.html">Pit picture</a></p>
-
+    <p><a href="./src/apps/Room6/Pit_AR/index.html">AR Pit</a></p>
+    <p><a href="./src/apps/Room6/Pit_AR_pic/index.html">AR Pit picture</a></p>
 
     <p><a href="./src/apps/Room6/ARandPresence/index.html">AR and Presence</a></p>
     <p><a href="./src/apps/Room6/Aura/index.html">Aura</a></p>
     <p><a href="./src/apps/Room6/Terracottta/index.html">Terracottta Description</a></p>
     <p><a href="./src/apps/Room6/TerracottaPic/index.html">Terracottta Picture</a></p>
+    <p><a href="./src/apps/Room6/Laciotat/index.html">Laciotat</a></p>
+    <p><a href="./src/apps/Room6/PlaceandSpace/index.html">Place and Space Diagram</a></p>
     <p><a href="./src/apps/Room6/Parthenon/index.html">Parthenon Description</a></p>
     <p><a href="./src/apps/Room6/cybersickness/index.html">cybersickness</a></p>
     <p><a href="./src/apps/Room6/cybersickness_pic/index.html">cybersickness picture</a></p>
