Fix image and css for Presence and Aura room

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <p><a href="./src/apps/Room6/ARandPresence/index.html">AR and Presence</a></p>
     <p><a href="./src/apps/Room6/Aura/index.html">Aura</a></p>
-    <p><a href="./src/apps/Room6/Terracottta/index.html">Terracottta Description</a></p>
+    <p><a href="./src/apps/Room6/Terracotta/index.html">Terracottta Description</a></p>
     <p><a href="./src/apps/Room6/TerracottaPic/index.html">Terracottta Picture</a></p>
     <p><a href="./src/apps/Room6/Laciotat/index.html">Laciotat</a></p>
     <p><a href="./src/apps/Room6/PlaceandSpace/index.html">Place and Space Diagram</a></p>
@@ -65,7 +65,8 @@
     <p><a href="./src/apps/Room6/Gaudi/index.html">Gaudi information</a></p>
     <p><a href="./src/apps/Room6/Gaudi_pic/index.html">Gaudi picture</a></p>
     <p><a href="./src/apps/Room6/jp_test/index.html">jp iframe test</a></p>
-    
+    <p><a href="./src/apps/Room6/Mainmap_black/index.html">main map in black background</a></p>
+
     <h2>Pit room</h2>
     <p><a href="./src/apps/Room_Pit/Pit/index.html">Pit</a></p>
     <p><a href="./src/apps/Room_Pit/PitInstruction/index.html">Pit Instruction</a></p>
