Update Presence and Aura Gallery
Deleted unnecessary apps, made modifications on existing apps and added new ones

--- a/index.html
+++ b/index.html
@@ -32,27 +32,26 @@
     <p><a href="./src/apps/Room5/GamesBanner/index.html">GamesBanner</a></p>
 
     <h2>Presence and Aura room (#6)</h2>
+    <!-- space 1 -->
     <p><a href="./src/apps/Room6/Room6_map/index.html">Map</a></p>
-    <p><a href="./src/apps/Room6/Room6_map_2/index.html">Map2</a></p>
-    <p><a href="./src/apps/Room6/Room6_map_3/index.html">Map3</a></p>
     <p><a href="./src/apps/Room6/Presence/index.html">Presence</a></p>
     <p><a href="./src/apps/Room6/Treehugger/index.html">Treehugger</a></p>
-    <p><a href="./src/apps/Room6/Treehugger_pic/">Treehugger picture</a></p>
-    <p><a href="./src/apps/Room6/TreehuggerPic2/">Treehugger picture2</a></p>
-
     <p><a href="./src/apps/Room6/Empathy/index.html">Empathy</a></p>
-    <p><a href="./src/apps/Room6/Empathy_title/index.html">Empathy title</a></p>
+    <p><a href="./src/apps/Room6/Absence_Mediation/index.html">Absence of Mediation</a></p>
+
+    <!-- space 2 -->
+    <p><a href="./src/apps/Room6/Room6_map_2/index.html">Map2</a></p>
     <p><a href="./src/apps/Room6/Milk/index.html">Chris Milk</a></p>
     <p><a href="./src/apps/Room6/Milk_pic/index.html">Cloud Over Sidra</a></p>
-    <p><a href="./src/apps/Room6/Milk_pic2/index.html">Cloud Over Sidra2</a></p>
     <p><a href="./src/apps/Room6/Nonnie/index.html">Nonnie</a></p>
     <p><a href="./src/apps/Room6/Nonnie_pic/index.html">Nonnie picture</a></p>
     <p><a href="./src/apps/Room6/PitExperiment/index.html">PitExperiment</a></p>
+    <p><a href="./src/apps/Room6/Pit_Experiment/index.html">Pit_Experiment</a></p>
     <p><a href="./src/apps/Room6/Pit_pic/index.html">Pit picture</a></p>
     <p><a href="./src/apps/Room6/Pit_AR/index.html">AR Pit</a></p>
     <p><a href="./src/apps/Room6/Pit_AR_pic/index.html">AR Pit picture</a></p>
-
-    <p><a href="./src/apps/Room6/ARandPresence/index.html">AR and Presence</a></p>
+    <!-- space 3  -->
+    <p><a href="./src/apps/Room6/Room6_map_3/index.html">Map3</a></p>
     <p><a href="./src/apps/Room6/Aura/index.html">Aura</a></p>
     <p><a href="./src/apps/Room6/Terracotta/index.html">Terracottta Description</a></p>
     <p><a href="./src/apps/Room6/TerracottaPic/index.html">Terracottta Picture</a></p>
@@ -64,7 +63,6 @@
     <p><a href="./src/apps/Room6/Exit/index.html">Exit</a></p>
     <p><a href="./src/apps/Room6/Gaudi/index.html">Gaudi information</a></p>
     <p><a href="./src/apps/Room6/Gaudi_pic/index.html">Gaudi picture</a></p>
-    <p><a href="./src/apps/Room6/jp_test/index.html">jp iframe test</a></p>
     <p><a href="./src/apps/Room6/Mainmap_black/index.html">main map in black background</a></p>
 
     <h2>Pit room</h2>
@@ -88,6 +86,7 @@
     <p><a href="./src/apps/Onboarding/AudioText/index.html">Audio Text</a></p>
     <p><a href="./src/apps/Onboarding/rotundaMap/index.html">Rotunda Map</a></p>
     <p><a href="./src/apps/Onboarding/Sharing/index.html">Other features</a></p>
+    
     <!-- monolith image -->
     <p><a href="./src/apps/Onboarding/ARVR_monolith/index.html">ARVR monolith</a></p>
     <p><a href="./src/apps/Onboarding/History_monolith/index.html">History monolith</a></p>
@@ -96,6 +95,9 @@
     <p><a href="./src/apps/Onboarding/Genres_monolith/index.html">Genres monolith</a></p>
     <p><a href="./src/apps/Onboarding/Privacy_monolith/index.html">Privacy_monolith monolith</a></p>
     <p><a href="./src/apps/Onboarding/Future_monolith/index.html">Future monolith</a></p>
+
+    <p><a href="./src/apps/Onboarding/Rotunda_force_graph/index.html">Rotunda Force Graph</a></p>
+
     <h2>Portal Apps</h2>
     <p><a href="./src/apps/Portal/PortalSubtitle/index.html">Portal Subtitle</a></p>
     <p><a href="./src/apps/Portal/PortalTitle/index.html">Portal Title</a></p>
