--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <p><a href="./src/apps/Room_Pit/PitInstruction/index.html">Pit Instruction</a></p>
     <p><a href="./src/apps/Room_Pit/pitSign1/index.html">Pit signage</a></p>
     <p><a href="./src/apps/Room_Pit/pitSign2/index.html">Pit signage2</a></p>
+    <p><a href="./src/apps/Room_Pit/pitSign3/index.html">Pit signage3</a></p>
 
     <h2>Onboarding Area</h2>
     <p><a href="./src/apps/Onboarding/Back/index.html">Back to the website</a></p>
