Update History gallery

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <p><a href="./src/apps/History/VRCave/index.html">VRCave</a></p>
     <p><a href="./src/apps/History/Zoetrope/index.html">Zoetrope</a></p>
     <p><a href="./src/apps/History/trompe/index.html">trompe</a></p>
+    <p><a href="./src/apps/History/UltimateDisplay/index.html">Ultimate Display</a></p>
 
     <h2>Presence and Aura room (#6)</h2>
     <!-- space 1 -->
