Update history gallery

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <h2>History Room</h2>
     <p><a href="./src/apps/History/LinearPerspective/index.html">Linear Perspective</a></p>
+    <p><a href="./src/apps/History/LinearPerspective_demo/index.html">Linear Perspective Demo</a></p>
     <p><a href="./src/apps/History/Panorama/index.html">Panorama</a></p>
     <p><a href="./src/apps/History/CameraObscura/index.html">Camera Obscura</a></p>
     <p><a href="./src/apps/History/Photography/index.html">Photography</a></p>
