Add quotes to Presence and Aura room

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     <p><a href="./src/apps/Room6/Nonnie_pic/index.html">Nonnie picture</a></p>
     <p><a href="./src/apps/Room6/Pit_Experiment/index.html">Pit_Experiment</a></p>
     <p><a href="./src/apps/Room6/Pit_AR/index.html">AR Pit</a></p>
+    <p><a href="./src/apps/Room6/Quote1/index.html">Quote 1</a></p>
+    <p><a href="./src/apps/Room6/Quote2/index.html">Quote 2</a></p>
+
     <!-- space 3  -->
     <p><a href="./src/apps/Room6/Room6_map_3/index.html">Map3</a></p>
     <p><a href="./src/apps/Room6/Aura/index.html">Aura</a></p>
