Add quotes to Presence gallery and fix anchor style

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
     <p><a href="./src/apps/Room6/Pit_AR/index.html">AR Pit</a></p>
     <p><a href="./src/apps/Room6/Quote1/index.html">Quote 1</a></p>
     <p><a href="./src/apps/Room6/Quote2/index.html">Quote 2</a></p>
+    <p><a href="./src/apps/Room6/Quote3/index.html">Quote 3</a></p>
+    <p><a href="./src/apps/Room6/Quote4/index.html">Quote 4</a></p>
+    <p><a href="./src/apps/Room6/Quote5/index.html">Quote 5</a></p>
 
     <!-- space 3  -->
     <p><a href="./src/apps/Room6/Room6_map_3/index.html">Map3</a></p>
