--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <p><a href="./src/apps/Room5/Minecraft/index.html">Minecraft</a></p>
     <p><a href="./src/apps/Room5/GamesBanner/index.html">GamesBanner</a></p>
     <p><a href="./src/apps/Room5/WalkingDead/index.html">WalkingDead</a></p>
-    <p><a href="./src/apps/Room5/William_Test/index.html">William Test</a></p> <!-- My Room -->
+    <p><a href="./src/apps/Room5/GoogleLiveView/index.html">Google Live</a></p>
+    <p><a href="./src/apps/Room5/RecRoom/index.html">Rec Room</a></p>
+    <p><a href="./src/apps/Room5/Steam/index.html">Steam</a></p>
+    
 
     <h2>History Room</h2>
     <p><a href="./src/apps/History/LinearPerspective/index.html">Linear Perspective</a></p>
